// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Pod/PodVolumeSectionDetailsView Empty 1`] = `
<div>
  <div
    class="MuiBox-root css-j1fy4m"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1qm9nul-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-70qvj9"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 MuiTypography-noWrap css-m5vcfd-MuiTypography-root"
          >
            Volumes
          </h2>
          <div
            class="MuiBox-root css-ldp2l3"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1txv3mw"
    />
  </div>
</div>
`;

exports[`Storyshots Pod/PodVolumeSectionDetailsView Short 1`] = `
<div>
  <div
    class="MuiBox-root css-j1fy4m"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1qm9nul-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-70qvj9"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 MuiTypography-noWrap css-m5vcfd-MuiTypography-root"
          >
            Volumes
          </h2>
          <div
            class="MuiBox-root css-ldp2l3"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1txv3mw"
    >
      <dl
        class="MuiGrid-root MuiGrid-container css-bddxam-MuiGrid-root"
      >
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 css-u4nmjw-MuiGrid-root"
        >
          ca-certs
        </dt>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          Kind
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            hostPath
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          Source
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ezega9-MuiTypography-root"
          >
            ca-certs
          </p>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          path
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            /etc/ssl/certs
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-16fae59-MuiGrid-root"
        >
          type
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-1xrovmc-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            DirectoryOrCreate
          </span>
        </dd>
      </dl>
      <dl
        class="MuiGrid-root MuiGrid-container css-bddxam-MuiGrid-root"
      >
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 css-u4nmjw-MuiGrid-root"
        >
          etc-ca-certificates
        </dt>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          Kind
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            hostPath
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          Source
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ezega9-MuiTypography-root"
          >
            etc-ca-certificates
          </p>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          path
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            /etc/ca-certificates
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-16fae59-MuiGrid-root"
        >
          type
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-1xrovmc-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            DirectoryOrCreate
          </span>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pod/PodVolumeSectionDetailsView Successful 1`] = `
<div>
  <div
    class="MuiBox-root css-j1fy4m"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1qm9nul-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-70qvj9"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 MuiTypography-noWrap css-m5vcfd-MuiTypography-root"
          >
            Volumes
          </h2>
          <div
            class="MuiBox-root css-ldp2l3"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1txv3mw"
    >
      <dl
        class="MuiGrid-root MuiGrid-container css-bddxam-MuiGrid-root"
      >
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 css-u4nmjw-MuiGrid-root"
        >
          ca-certs
        </dt>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          Kind
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            hostPath
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          Source
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ezega9-MuiTypography-root"
          >
            ca-certs
          </p>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          path
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            /etc/ssl/certs
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-16fae59-MuiGrid-root"
        >
          type
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-1xrovmc-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            DirectoryOrCreate
          </span>
        </dd>
      </dl>
      <dl
        class="MuiGrid-root MuiGrid-container css-bddxam-MuiGrid-root"
      >
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 css-u4nmjw-MuiGrid-root"
        >
          etc-ca-certificates
        </dt>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          Kind
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            hostPath
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          Source
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ezega9-MuiTypography-root"
          >
            etc-ca-certificates
          </p>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          path
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            /etc/ca-certificates
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-16fae59-MuiGrid-root"
        >
          type
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-1xrovmc-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            DirectoryOrCreate
          </span>
        </dd>
      </dl>
      <dl
        class="MuiGrid-root MuiGrid-container css-bddxam-MuiGrid-root"
      >
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 css-u4nmjw-MuiGrid-root"
        >
          flexvolume-dir
        </dt>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          Kind
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            hostPath
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          Source
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ezega9-MuiTypography-root"
          >
            flexvolume-dir
          </p>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          path
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            /usr/libexec/kubernetes/kubelet-plugins/volume/exec
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-16fae59-MuiGrid-root"
        >
          type
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-1xrovmc-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            DirectoryOrCreate
          </span>
        </dd>
      </dl>
      <dl
        class="MuiGrid-root MuiGrid-container css-bddxam-MuiGrid-root"
      >
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 css-u4nmjw-MuiGrid-root"
        >
          k8s-certs
        </dt>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          Kind
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            hostPath
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          Source
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ezega9-MuiTypography-root"
          >
            k8s-certs
          </p>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          path
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            /var/lib/minikube/certs
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-16fae59-MuiGrid-root"
        >
          type
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-1xrovmc-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            DirectoryOrCreate
          </span>
        </dd>
      </dl>
      <dl
        class="MuiGrid-root MuiGrid-container css-bddxam-MuiGrid-root"
      >
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 css-u4nmjw-MuiGrid-root"
        >
          kubeconfig
        </dt>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          Kind
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            hostPath
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          Source
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ezega9-MuiTypography-root"
          >
            kubeconfig
          </p>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          path
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            /etc/kubernetes/controller-manager.conf
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-16fae59-MuiGrid-root"
        >
          type
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-1xrovmc-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            FileOrCreate
          </span>
        </dd>
      </dl>
      <dl
        class="MuiGrid-root MuiGrid-container css-bddxam-MuiGrid-root"
      >
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 css-u4nmjw-MuiGrid-root"
        >
          usr-local-share-ca-certificates
        </dt>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          Kind
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            hostPath
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          Source
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ezega9-MuiTypography-root"
          >
            usr-local-share-ca-certificates
          </p>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          path
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            /usr/local/share/ca-certificates
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-16fae59-MuiGrid-root"
        >
          type
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-1xrovmc-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            DirectoryOrCreate
          </span>
        </dd>
      </dl>
      <dl
        class="MuiGrid-root MuiGrid-container css-bddxam-MuiGrid-root"
      >
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 css-u4nmjw-MuiGrid-root"
        >
          usr-share-ca-certificates
        </dt>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          Kind
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            hostPath
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          Source
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-1ezega9-MuiTypography-root"
          >
            usr-share-ca-certificates
          </p>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-trrd7p-MuiGrid-root"
        >
          path
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-deb4a-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            /usr/share/ca-certificates
          </span>
        </dd>
        <dt
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 css-16fae59-MuiGrid-root"
        >
          type
        </dt>
        <dd
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 css-1xrovmc-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1qti38g-MuiTypography-root"
          >
            DirectoryOrCreate
          </span>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;
